@@ -3,8 +3,8 @@
             :url "http://example.com/FIXME"
             :license {:name "Eclipse Public License"
                       :url  "http://www.eclipse.org/legal/epl-v10.html"}
-            :dependencies [[org.clojure/clojure "1.9.0-alpha16"]
-                           [org.clojure/clojurescript "1.9.542"]
+            :dependencies [[org.clojure/clojure "1.9.0"]
+                           [org.clojure/clojurescript "1.9.946"]
                            $INTERFACE_DEPS$]
             :plugins [[lein-cljsbuild "1.1.4"]
                       [lein-figwheel "0.5.14"]]
@@ -15,6 +15,7 @@
                       "advanced-build" ^{:doc "Recompile code for production using :advanced compilation."}
                                    ["do" "clean"
                                     ["with-profile" "advanced" "cljsbuild" "once"]]}
+            :jvm-opts ["-XX:+IgnoreUnrecognizedVMOptions" "--add-modules java.xml.bind"]
             :profiles {:dev {:dependencies [[figwheel-sidecar "0.5.14"]
                                             [com.cemerick/piggieback "0.2.1"]]
                              :source-paths ["src" "env/dev"]
